--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
         <link rel="stylesheet" href="css/icon-font.css">
+        <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
+
+    <!----------------------------------- HEADER ----------------------------------------->
     <body>
         <header class="header">
             <div class="header__logo-box">
@@ -27,7 +30,7 @@
                 <a href="#" class="btn btn--white btn--animated">Discover Our Tours</a>
             </div>
         </header>
-
+<!----------------------------------- ABOUT ----------------------------------------->
         <main>
             <section class="section-about">
                 <div class="u-center-text u-margin-bottom-big">
@@ -46,8 +49,7 @@
                             adipisicing elit. Nobis, ducimus dolore! 
                             Illo incidunt aliquam voluptate eum? 
                             Doloribus tenetur maxime, veritatis ipsa, 
-                            placeat laudantium temporibus, iure debitis 
-                            expedita nemo ducimus quod?
+                            placeat.
                         </p>
                         <h3 class="heading-tertiary u-margin-bottom-small">
                             Live adventures like you never have before
@@ -56,9 +58,6 @@
                             Lorem ipsum dolor sit amet consectetur 
                             adipisicing elit. Nobis, ducimus dolore! 
                             Illo incidunt aliquam voluptate eum? 
-                            Doloribus tenetur maxime, veritatis ipsa, 
-                            placeat laudantium temporibus, iure debitis 
-                            expedita nemo ducimus quod?
                         </p>
 
                         <a href="#" class="btn-text">Learn More &rarr;</a>
@@ -68,6 +67,61 @@
                             <img src="img/nat-1-large.jpg" alt="photo 1" class="composition__photo composition__photo--p1">
                             <img src="img/nat-2-large.jpg" alt="photo 2" class="composition__photo composition__photo--p2">
                             <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+<!----------------------------------- Features ----------------------------------------->
+
+            <section class="section-features">
+
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-world"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur 
+                                adipisicing elit. Nobis, ducimus dolore! 
+                                Illo incidunt aliquam voluptate eum? 
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-compass"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Meet Nature</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur 
+                                adipisicing elit. Nobis, ducimus dolore! 
+                                Illo incidunt aliquam voluptate eum? 
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-map"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Find Your Way</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur 
+                                adipisicing elit. Nobis, ducimus dolore! 
+                                Illo incidunt aliquam voluptate eum? 
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-heart"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Live a Healthier Life</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur 
+                                adipisicing elit. Nobis, ducimus dolore! 
+                                Illo incidunt aliquam voluptate eum? 
+                            </p>
                         </div>
                     </div>
                 </div>
