--- a/index.html
+++ b/index.html
@@ -375,6 +375,37 @@
             </section>
         </main>
 
+        <footer class="footer">
+
+            <div class="footer__logo-box">
+                <img src="img/logo-green-small-2x.png" alt="full logo" class="footer__logo">
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Contact Us</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <p class="footer__copyright">
+                        Built by <a href="#" class="footer__link">Ishmael Jalloh </a>
+                        while I followed Jonas' SCSS course on Udemy so I can actually get 
+                        good at SCSS and CSS. Copyright &copy; by Ishmael Jalloh. 
+                        You are 100% allowed to hire me after viewing this website and
+                        the rest of my portfolio.
+                    </p>
+                </div>
+            </div>
+
+        </footer>
+
 
         <!-- CSS NOTES 
         <section class="grid-text">
